# nl_softwareEstrela

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.build.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  tailwind.config.js
.claude/skills/estrela-gestao-api/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: auto-release.yml  ci.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: 417902adb707_alargar_deploys_origem_para_200.py  7b1cc57111e9_empresa_config.py  9c311b4bb27f_deploys_e_cache_do_status_do_ci.py  a3c9d1e7f2b4_imagem_url_minio.py  a9c4d7e1f2b3_backfill_variacao_padrao.py  b7d2e9a1c3f5_token_version_usuario.py  b7e2c9f4a1d8_imagens_no_postgres.py  c1e4f8a2d6b9_cliente_ajustes.py  d2f6b8c4a1e7_cliente_dados_fiscais.py  de1bbd3b488c_imagem_por_variacao.py  e8c1d2a3b4f5_recuperar_imagens_minio.py  ebe4f3cc404e_schema_inicial.py  f1a2b3c4d5e6_status_separado.py
app/: jobs.py  main.py
app/controllers/: cliente_controller.py  deploy_controller.py  empresa_controller.py  estoque_controller.py  financeiro_controller.py  inventario_controller.py  pedido_controller.py  produto_controller.py  relatorio_controller.py  usuario_controller.py
app/core/: config.py  database.py  errors.py  estoque_alertas.py  eventos.py  imagens.py  locks.py  planilha.py  rate_limit.py  security.py  templates.py  versao.py
app/importer/: __init__.py  carga.py  parser.py  staging.py  validador.py
app/integracoes/: __init__.py  github.py
app/models/: __init__.py  auditoria.py  categoria.py  cliente.py  conta_receber.py  deploy.py  empresa_config.py  enums.py  fornecedor.py  inventario.py  movimentacao.py  pedido.py  produto.py  sync_outbox.py  usuario.py
app/realtime/: __init__.py  listener.py  manager.py
app/repositories/: cliente_repo.py  conta_repo.py  deploy_repo.py  empresa_repo.py  estoque_repo.py  pedido_repo.py  produto_repo.py  relatorio_repo.py  usuario_repo.py
app/schemas/: cliente.py  empresa.py  estoque.py  financeiro.py  pedido.py  produto.py  usuario.py
app/services/: auth_service.py  ci_service.py  cliente_service.py  deploy_service.py  empresa_service.py  estoque_service.py  financeiro_service.py  inventario_service.py  pedido_service.py  produto_service.py  relatorio_service.py  saude_service.py  usuario_service.py
app/static/: manifest.webmanifest  sw.js
app/static/css/: input.css  output.css
app/static/js/: realtime.js  ui.js
app/web/routes/: _flash.py  auth.py  clientes.py  dashboard.py  deploy.py  empresa.py  estoque.py  financeiro.py  guia.py  importacao.py  pedidos.py  produtos.py  realtime.py  relatorios.py  separacao.py  usuarios.py
app/web/templates/: _flash.html  _icones.html  _ui.html  base.html  dashboard.html  erro.html  login.html
app/web/templates/clientes/: _linhas.html  form.html  index.html
app/web/templates/dashboard/: _kpis.html
app/web/templates/deploy/: _auto.html  _ci.html  _historico.html  _log.html  _modal.html  _releases.html  _saude.html  _status.html  index.html
app/web/templates/empresa/: form.html
app/web/templates/estoque/: _cartoes_local.html  _linhas.html  _linhas_mov.html  _macro_cartao_local.html  _macro_linha.html  _oob.html  _tabs_nav.html  index.html  inventario_contagem.html  inventario_index.html  localizacao.html  movimentacoes.html
app/web/templates/financeiro/: _linhas.html  index.html
app/web/templates/guia/: index.html
app/web/templates/importacao/: _preview.html  _resultado.html  index.html
app/web/templates/pedidos/: _acoes.html  _busca_resultado.html  _estado_oob.html  _itens.html  (+8 more)
deploy/: agente.env.example  estrela-agente.service  instalar-agente.sh
docs/: 00-indice-e-guia.md  01-regras-de-negocio.md  02-arquitetura-e-fundacao.md  03-modelo-de-dados-e-migrations.md  04-etl-importacao-planilhas.md  05-modulo-estoque.md  06-modulo-pedidos-e-financeiro.md  07-frontend-ui-pwa.md  08-infra-deploy-e-go-live.md  dicionario-dados.md  disaster-recovery.md  go-live-checklist.md  guia-instalacao-servidor.md  lgpd-operador.md  nobreak-nut.md  qa-relatorio.md  runbook-go-live-deploy.md  runbook-servidor.md
scripts/: backup-estrela.sh  backup-offsite.sh  capturar_telas.py  demo_dados.py  entrypoint.sh  gerar_doc_tecnica.py  gerar_guia_instalacao.py  gerar_imagens_demo.py  gerar_pdf.py  import_planilhas.py  migrar_imagens_minio.py  migrar_seguro.py  recuperar_imagens_minio.py  restore-estrela.sh  seed.py
scripts/agente/: agente.py
tests/: conftest.py  test_agente.py  test_clientes.py  test_deploy.py  test_empresa.py  test_estoque.py  test_financeiro.py  test_imagens.py  test_importer.py  test_modelo.py  test_pedidos.py  test_produtos.py  test_rbac.py  test_realtime.py  test_relatorios.py  test_seguranca.py  test_ui.py  test_usuarios.py
(+18 files in other folders)
