[project]
name = "estrela-softwarelocal"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "fastapi>=0.138.0",
    "gunicorn>=26.0.0",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "passlib[argon2]>=1.7.4",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "weasyprint>=69.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "playwright>=1.60.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI usa Depends() em defaults de argumento

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E501"]
"scripts/gerar_pdf.py" = ["E501"]  # HTML/CSS embutido para o PDF de demonstração
"scripts/gerar_doc_tecnica.py" = ["E501"]  # HTML/CSS embutido para o PDF de documentação

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
